# Tekeimyung

./: .gitignore  CMakeLists.txt  GameUtils.py  README.md
ECS/: CMakeLists.txt
ECS/include/: Component.h  Component.hh  Entity.hpp  EntityManager.h  EntityManager.hpp  System.h  System.hpp  World.h  World.hpp
ECS/include/ECS/: Component.hh  Entity.hpp  EntityManager.hpp  EntityPool.hpp  System.hpp  World.hpp  crc32.hh
ECS/src/: EntityManager.cpp  System.cpp  World.cpp
ECS/src/ECS/: Entity.cpp  EntityManager.cpp  EntityPool.cpp  System.cpp  World.cpp
Engine/: CMakeLists.txt  generate_shaders_permutations.py
Engine/include/Core/: CollisionMap.hpp  Components.hh  Engine.hpp  GameState.hpp  GameStateManager.hpp  Map.hpp  System.hpp
Engine/include/Engine/: BasicState.hpp  ComponentFactory.hpp  Components.hh  EditorMenuDebugWindow.hpp  EditorState.hpp  EntitiesTemplateDebugWindow.hpp  EntityDebugWindow.hpp  EntityFactory.hpp  LevelEntitiesDebugWindow.hpp  MaterialDebugWindow.hpp  MenuBarDebugWindow.hpp  ScreenResDebugWindow.hpp  SoundEditorWindow.hpp
Engine/include/Engine/Core/: BaseScript.hpp  BasicClass.hpp  Engine.hpp  GameState.hpp  GameStateManager.hpp  ScriptFactory.hpp
Engine/include/Engine/Debug/: DebugWindow.hpp  EntitiesTemplateDebugWindow.hpp  IInspectorImplementation.hpp  InspectorDebugWindow.hpp  LevelEntitiesDebugWindow.hpp  LogDebugWindow.hpp  Logger.hpp  MaterialDebugWindow.hpp  MenuBarDebugWindow.hpp  MonitoringDebugWindow.hpp  OverlayDebugWindow.hpp  SoundEditorWindow.hpp
Engine/include/Engine/Graphics/: Animation.hpp  Animator.hpp  Buffer.hpp  BufferPool.hpp  Camera.hpp  Framebuffer.hpp  Light.hpp  Material.hpp  Mesh.hpp  MeshInstance.hpp  Model.hpp  Model2DRenderer.hpp  ModelInstance.hpp  ParamAnimation.hpp  ParamAnimation.inl  Ray.hpp  RenderQueue.hpp  Renderer.hpp  ShaderProgram.hpp  Skeleton.hpp  Sprite.hpp  Texture.hpp  Transform.hpp  Transform.inl  UniformBuffer.hpp
Engine/include/Engine/Physics/: Collisions.hpp  Physics.hpp
Engine/include/Engine/Sound/: SoundManager.hpp
Engine/include/Engine/Systems/: ButtonSystem.hpp  CollisionSystem.hpp  GravitySystem.hpp  MenuSystem.hpp  MouseSystem.hpp  ParticleSystem.hpp  RenderingSystem.hpp  ResolutionSystem.hpp  RigidBodySystem.hpp  ScriptSystem.hpp  UISystem.hpp
Engine/include/Engine/Utils/: Debug.hpp  DebugWindow.hpp  EnumManager.hpp  EventSound.hpp  Exception.hpp  File.hpp  Helper.hpp  JsonReader.hpp  JsonValue.hpp  JsonWriter.hpp  LevelLoader.hpp  LogDebugWindow.hpp  Logger.hpp  Maths.hpp  MonitoringDebugWindow.hpp  OverlayDebugWindow.hpp  Resource.hpp  ResourceManager.hpp  RessourceManager.hpp  Timer.hpp  Utils.hh
Engine/include/Engine/Window/: CloseWindowEvent.hpp  Cursor.hpp  GameWindow.hpp  HandleFullscreenEvent.hpp  HandleMaximizeEvent.hpp  IInputEvent.hpp  Keyboard.hpp  Monitor.hpp  Mouse.hpp  VideoMode.hpp
Engine/include/Graphics/: Animation.hpp  Buffer.hpp  Camera.hpp  Material.hpp  Mesh.hpp  Model.hpp  Skeleton.hpp  Sprite.hpp  Texture.hpp  UniformBuffer.hpp
Engine/include/Physics/: CollisionSystem.hpp  GravitySystem.hpp  MovementSystem.hpp
Engine/include/Sound/: SoundManager.hpp
Engine/include/Utils/: Debug.hpp  DebugOverlayWindow.hpp  DebugWindow.hpp  EngineException.hpp  Exception.hpp  Helper.hpp  LogDebugWindow.hpp  Logger.hpp  OverlayDebugWindow.hpp  RessourceManager.hpp  Timer.hpp
Engine/include/Window/: CloseWindowEvent.hpp  GameWindow.hpp  HandleFullscreenEvent.hpp  HandleMaximizeEvent.hpp  Keyboard.hpp  Mouse.hpp
Engine/resources/archetypes/: camera_preview.json  empty_object.json  icon_selected.json
Engine/resources/materials/: camera.mat
Engine/resources/shaders/: shader.frag  shader.vert
Engine/src/: main.cpp
Engine/src/Core/: CollisionMap.cpp  Engine.cpp  GameState.cpp  GameStateManager.cpp  Map.cpp  System.cpp
Engine/src/Engine/: BasicState.cpp  ComponentFactory.cpp  EditorMenuDebugWindow.cpp  EditorState.cpp  EntitiesTemplateDebugWindow.cpp  EntityDebugWindow.cpp  EntityFactory.cpp  LevelEntitiesDebugWindow.cpp  MaterialDebugWindow.cpp  MenuBarDebugWindow.cpp  ScreenResDebugWindow.cpp  SoundEditorWindow.cpp
Engine/src/Engine/Core/: BaseScript.cpp  (+4 more)
Engine/src/Graphics/: Animation.cpp  Buffer.cpp  Camera.cpp  Material.cpp  Mesh.cpp  Model.cpp  ShaderProgram.cpp  Skeleton.cpp  Sprite.cpp  Texture.cpp  UniformBuffer.cpp
Engine/src/Physics/: CollisionSystem.cpp  Collisions.cpp  GravitySystem.cpp  MovementSystem.cpp
Engine/src/Sound/: SoundManager.cpp
Engine/src/Utils/: Debug.cpp  DebugOverlayWindow.cpp  DebugWindow.cpp  Exception.cpp  Helper.cpp  LogDebugWindow.cpp  Logger.cpp  OverlayDebugWindow.cpp  RessourceManager.cpp  Timer.cpp
Engine/src/Window/: CloseWindowEvent.cpp  Cursor.cpp  GameWindow.cpp  HandleFullscreenEvent.cpp  HandleMaximizeEvent.cpp  Keyboard.cpp  Mouse.cpp
Game/: CMakeLists.txt
Game/include/: CollisionMap.hpp  ComponentFactory.hpp  Components.hh  EntityDebugWindow.hpp  EntityFactory.hpp  JsonReader.hpp  JsonValue.hpp  JsonWriter.hpp
Game/include/Game/: CollisionMap.hpp  ComponentFactory.hpp  Components.hh  DoubleArray.hpp  EntityDebugWindow.hpp  EntityFactory.hpp  Map.hpp  MapLoader.hpp  SoundEditorWindow.hpp
Game/include/GameStates/: PlayState.hpp
Game/include/Systems/: AISystem.hpp  CollisionSystem.hpp  GravitySystem.hpp  InputSystem.hpp  MovementSystem.hpp  ParticleSystem.hpp  ProjectileSystem.hpp  RenderingSystem.hpp  TowerAISystem.hpp
Game/include/Utils/: JsonReader.hpp  JsonValue.hpp  JsonWriter.hpp
Game/src/: CollisionMap.cpp  ComponentFactory.cpp  EntityDebugWindow.cpp  EntityFactory.cpp  JsonReader.cpp  JsonValue.cpp  JsonWriter.cpp  main.cpp
Game/src/Game/: CollisionMap.cpp  ComponentFactory.cpp  DoubleArray.cpp  EntityDebugWindow.cpp  EntityFactory.cpp  Map.cpp  MapLoader.cpp  SoundEditorWindow.cpp  Test.cpp  main.cpp
Game/src/GameStates/: PlayState.cpp
Game/src/Systems/: AISystem.cpp  CollisionSystem.cpp  GravitySystem.cpp  InputSystem.cpp  MovementSystem.cpp  ParticleSystem.cpp  ProjectileSystem.cpp  RenderingSystem.cpp  TowerAISystem.cpp
Game/src/Utils/: JsonValue.cpp  JsonWriter.cpp
(+641 files in other folders)
